--- a/apps/colaborador/index.html
+++ b/apps/colaborador/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-    <title>Logística Pessoal (Demo)</title>
+    <title>App do Colaborador</title>
   </head>
   <body>
     <div id="root"></div>
